; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_vfpf.c_storm_memset_vf_mbx_ack.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_vfpf.c_storm_memset_vf_mbx_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }

@BAR_CSTRORM_INTMEM = common dso_local global i64 0, align 8
@VF_PF_CHANNEL_STATE_READY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnx2x*, i32)* @storm_memset_vf_mbx_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @storm_memset_vf_mbx_ack(%struct.bnx2x* %0, i32 %1) #0 {
  %3 = alloca %struct.bnx2x*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.bnx2x* %0, %struct.bnx2x** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* @BAR_CSTRORM_INTMEM, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @CSTORM_VF_PF_CHANNEL_STATE_OFFSET(i32 %7)
  %9 = add nsw i64 %6, %8
  store i64 %9, i64* %5, align 8
  %10 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i32, i32* @VF_PF_CHANNEL_STATE_READY, align 4
  %13 = call i32 @REG_WR8(%struct.bnx2x* %10, i64 %11, i32 %12)
  ret void
}

declare dso_local i64 @CSTORM_VF_PF_CHANNEL_STATE_OFFSET(i32) #1

declare dso_local i32 @REG_WR8(%struct.bnx2x*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
